Added the game results to the DOM

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
 			<!--<p>What game would you like info for? <input id="inputBox" type="search" name="Enter Here"></p>-->
 			<form id="testing">
 				What would you like to search for: <input class="searchBox" type="text" name="userInput"><input class="searchButton" type ="submit" value="Submit">
-
+		
 			</form>
-			<div class = "game1 col-med-3">
-			</div>
-			<div class = "game2 col-med-6">
 			</div>
 
-		</div>
+			<div class = "gameResults">
+			</div>
 
 	</div>
+
+	
 
 
 
